ending section 4, CRUD complete
Signed-off-by: JOSE ALONSO LOPEZ ROMO <alonso.lopez.r@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
             console.clear();
             console.table(bands);
         });
+        socket.on('active-bands', function(bands) {
+            console.clear();
+            console.table(bands);
+        });
     </script>
 
 </body>
